--- a/scss/themes/dark/variables/components/_links.scss
+++ b/scss/themes/dark/variables/components/_links.scss
@@ -2,7 +2,7 @@
 //
 // Style anchor elements.
 
-$link-color__dt:        $primary-50 !default;
+$link-color__dt:        lighten($primary__dt, 12.5%) !default;
 $link-hover-color__dt:  darken($link-color__dt, 15%) !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
