--- a/scss/themes/dark/variables/components/_shared.scss
+++ b/scss/themes/dark/variables/components/_shared.scss
@@ -19,5 +19,5 @@ $border-theme-map: map-merge(
 $component-color__dt:  $body-color__dt !default;
 $component-bg__dt:     $gray-800__dt !default;
 
-$component-active-color__dt:  $black !default;
-$component-active-bg__dt:     $primary-50 !default;
+$component-active-color__dt:  $white !default;
+$component-active-bg__dt:     $primary__dt !default;
