--- a/scss/themes/dark/variables/components/_breadcrumb.scss
+++ b/scss/themes/dark/variables/components/_breadcrumb.scss
@@ -1,10 +1,11 @@
 // Breadcrumbs
 
 // Dark theme
+
 $breadcrumb-bg__dt:             transparent !default;
 $breadcrumb-border-color__dt:   $component-bg__dt !default;
 $breadcrumb-divider-color__dt:  $body-color__dt !default;
-$breadcrumb-active-color__dt:   $gray-600 !default;
+$breadcrumb-active-color__dt:   $gray-600__dt !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $breadcrumb-theme-map: map-merge(
