--- a/scss/themes/dark/variables/components/_pagination.scss
+++ b/scss/themes/dark/variables/components/_pagination.scss
@@ -2,20 +2,20 @@
 // Pagination
 
 // Dark theme
-$pagination-color__dt:                  $link-color !default;
-$pagination-bg__dt:                     $gray-800 !default;
+$pagination-color__dt:                  $body-color__dt !default;
+$pagination-bg__dt:                     rgba($white, .075) !default;
 $pagination-border-color__dt:           $border-color__dt !default;
 $pagination-focus-box-shadow__dt:       $input-btn-focus-box-shadow !default;
 $pagination-focus-outline__dt:          0 !default;
-$pagination-hover-color__dt:            $link-hover-color !default;
-$pagination-hover-bg__dt:               $gray-900 !default;
-$pagination-hover-border-color__dt:     $gray-900 !default;
+$pagination-hover-color__dt:            $body-color__dt !default;
+$pagination-hover-bg__dt:               $border-color__dt !default;
+$pagination-hover-border-color__dt:     $border-color__dt !default;
 $pagination-active-color__dt:           $component-active-color__dt !default;
 $pagination-active-bg__dt:              $component-active-bg__dt !default;
 $pagination-active-border-color__dt:    $pagination-active-bg !default;
-$pagination-disabled-color__dt:         $gray-600 !default;
-$pagination-disabled-bg__dt:            $gray-900 !default;
-$pagination-disabled-border-color__dt:  $gray-900 !default;
+$pagination-disabled-color__dt:         rgba($white, .5) !default;
+$pagination-disabled-bg__dt:            rgba($white, .025) !default;
+$pagination-disabled-border-color__dt:  $border-color__dt !default;
 
 // stylelint-disable-next-line scss/dollar-variable-default
 $pagination-theme-map: map-merge(
