--- a/scss/themes/dark/variables/components/_sidebar.scss
+++ b/scss/themes/dark/variables/components/_sidebar.scss
@@ -12,10 +12,10 @@ $sidebar-form-placeholder-color__dt:              rgba($white, .7) !default;
 $sidebar-nav-title-color__dt:                     rgba($white, .6) !default;
 $sidebar-nav-link-color__dt:                      rgba($white, .8) !default;
 $sidebar-nav-link-bg__dt:                         transparent !default;
-$sidebar-nav-link-icon-color__dt:                 $gray-600 !default;
+$sidebar-nav-link-icon-color__dt:                 rgba($white, .6) !default;
 $sidebar-nav-link-borders__dt:                    0 !default;
 $sidebar-nav-link-hover-color__dt:                $white !default;
-$sidebar-nav-link-hover-bg__dt:                   desaturate($primary, 20%) !default;
+$sidebar-nav-link-hover-bg__dt:                   $primary__dt !default;
 $sidebar-nav-link-hover-icon-color__dt:           $white !default;
 $sidebar-nav-link-hover-borders__dt:              0 !default;
 $sidebar-nav-link-active-color__dt:               $white !default;
@@ -29,13 +29,13 @@ $sidebar-nav-link-disabled-borders__dt:           0 !default;
 $sidebar-nav-dropdown-color__dt:                  $white !default;
 $sidebar-nav-dropdown-bg__dt:                   rgba(0, 0, 0, .2) !default;
 $sidebar-nav-dropdown-borders__dt:                0 !default;
-$sidebar-nav-dropdown-indicator-color__dt:        $gray-600 !default;
+$sidebar-nav-dropdown-indicator-color__dt:        rgba($white, .5) !default;
 $sidebar-nav-dropdown-indicator__dt:              str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 14'%3E%3Cpath fill='#{$sidebar-nav-dropdown-indicator-color__dt}' d='M9.148 2.352l-4.148 4.148 4.148 4.148q0.148 0.148 0.148 0.352t-0.148 0.352l-1.297 1.297q-0.148 0.148-0.352 0.148t-0.352-0.148l-5.797-5.797q-0.148-0.148-0.148-0.352t0.148-0.352l5.797-5.797q0.148-0.148 0.352-0.148t0.352 0.148l1.297 1.297q0.148 0.148 0.148 0.352t-0.148 0.352z'/%3E%3C/svg%3E"), "#", "%23") !default;
 $sidebar-nav-dropdown-indicator-hover-color__dt:  $sidebar-nav-link-hover-color__dt !default;
 $sidebar-nav-dropdown-indicator-hover__dt:        str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 14'%3E%3Cpath fill='#{$sidebar-nav-dropdown-indicator-hover-color__dt}' d='M9.148 2.352l-4.148 4.148 4.148 4.148q0.148 0.148 0.148 0.352t-0.148 0.352l-1.297 1.297q-0.148 0.148-0.352 0.148t-0.352-0.148l-5.797-5.797q-0.148-0.148-0.148-0.352t0.148-0.352l5.797-5.797q0.148-0.148 0.352-0.148t0.352 0.148l1.297 1.297q0.148 0.148 0.148 0.352t-0.148 0.352z'/%3E%3C/svg%3E"), "#", "%23") !default;
 $sidebar-nav-tabs-border-color__dt:               rgba($black, .2) !default;
 $sidebar-nav-tabs-link-active-bg__dt:             rgba($white, .05) !default;
-$sidebar-nav-tabs-link-active-border-color__dt:   rgba($black, .2) rgba($black, .2) desaturate($primary, 20%) !default;
+$sidebar-nav-tabs-link-active-border-color__dt:   rgba($black, .2) rgba($black, .2) $primary__dt !default;
 $sidebar-nav-tabs-link-hover-bg__dt:              rgba($black, .2) !default;
 $sidebar-nav-tabs-link-hover-border-color__dt:    rgba($black, .2) rgba($black, .2) $gray-200 !default;
 $sidebar-tab-content-borders__dt:                 ( top: 1px solid rgba($black, .2) ) !default;
@@ -43,7 +43,7 @@ $sidebar-footer-bg__dt:                           rgba($black, .2) !default;
 $sidebar-footer-borders__dt:                      0 !default;
 $sidebar-minimizer-borders__dt:                   0 !default;
 $sidebar-minimizer-bg__dt:                        rgba($black, .2) !default;
-$sidebar-minimizer-indicator-color__dt:           $gray-600 !default;
+$sidebar-minimizer-indicator-color__dt:           rgba($white, .5) !default;
 $sidebar-minimizer-indicator__dt:                 str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 11 14'%3E%3Cpath fill='#{$sidebar-minimizer-indicator-color__dt}' d='M9.148 2.352l-4.148 4.148 4.148 4.148q0.148 0.148 0.148 0.352t-0.148 0.352l-1.297 1.297q-0.148 0.148-0.352 0.148t-0.352-0.148l-5.797-5.797q-0.148-0.148-0.148-0.352t0.148-0.352l5.797-5.797q0.148-0.148 0.352-0.148t0.352 0.148l1.297 1.297q0.148 0.148 0.148 0.352t-0.148 0.352z'/%3E%3C/svg%3E"), "#", "%23") !default;
 $sidebar-minimizer-hover-bg__dt:                rgba(0, 0, 0, .3) !default;
 $sidebar-minimizer-hover-indicator-color__dt:     $sidebar-nav-link-hover-color__dt !default;
