--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -17,7 +17,7 @@
     background-color: themes-get-value("card-bg");
     border-color: themes-get-value("card-border-color");
   }
-  @include elevation(1, false, true);
+  @include elevation(1);
 
   > hr {
     margin-right: 0;
