perf: update transitions

--- a/scss/_transitions.scss
+++ b/scss/_transitions.scss
@@ -39,15 +39,8 @@
 //
 
 .c-wrapper {
-  transition: margin $layout-transition-speed ease;
+  transition: margin $layout-transition-speed;
 }
-
-.c-body {
-  contain: paint;
-  // will-change: contents;
-  // transform: translateZ(0);
-}
-
 
 .c-sidebar {
   transition: box-shadow $layout-transition-speed $layout-transition-speed, transform $layout-transition-speed, margin-left $layout-transition-speed, margin-right $layout-transition-speed, width $layout-transition-speed, z-index 0s ease $layout-transition-speed;
