--- a/scss/layouts/_default.scss
+++ b/scss/layouts/_default.scss
@@ -4,7 +4,7 @@
 
 .c-app {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   min-height: 100vh;
 }
 
@@ -18,21 +18,47 @@
 
 .c-wrapper {
   display: flex;
+  flex: 1;
   flex-direction: column;
+  min-width: 0;
+  min-height: 100vh;
 
   &:not(.c-wrapper-fluid) {
-    height: 100vh;
 
-    .c-header-fixed,
-    .c-subheader-fixed,
-    .c-footer-fixed {
+    .c-subheader-fixed {
       position: relative;
     }
 
+    .c-header-fixed {
+      position: sticky;
+      top: 0;
+
+      @media all and (-ms-high-contrast: none) {
+        position: fixed;
+        margin: inherit;
+
+        ~ .c-body {
+          margin-top: 104px;
+        }
+      }
+    }
+
+    .c-footer-fixed {
+      position: sticky;
+      bottom: 0;
+
+      @media all and (-ms-high-contrast: none) {
+        position: fixed;
+        margin: inherit;
+
+        ~ .c-body {
+          margin-bottom: 49px;
+        }
+      }
+    }
+
     .c-body {
-      flex-direction: column;
-      overflow-x: hidden;
-      overflow-y: auto;
+      flex-grow: 1;
     }
   }
 
@@ -43,12 +69,6 @@
       margin: inherit;
     }
   }
-}
-
-.c-body {
-  display: flex;
-  flex-direction: row;
-  flex-grow: 1;
 }
 
 .c-main {
