feat: table selected styles

--- a/scss/themes/dark/variables/components/_tables.scss
+++ b/scss/themes/dark/variables/components/_tables.scss
@@ -8,7 +8,7 @@ $table-bg__dt:            transparent !default;
 $table-accent-bg__dt:     rgba($black, .05) !default;
 $table-hover-color__dt:   $body-color__dt !default;
 $table-hover-bg__dt:      rgba($white, .1) !default;
-$table-active-bg__dt:     rgba($white, .075) !default;
+$table-active-bg__dt:     rgba($black, .2) !default;
 $table-border-color__dt:  rgba($white, .1) !default;
 $table-head-bg__dt:       rgba($white, .05) !default;
 $table-head-color__dt:    $body-color__dt !default;
