--- a/scss/themes/legacy/variables/components/_tables.scss
+++ b/scss/themes/legacy/variables/components/_tables.scss
@@ -5,7 +5,7 @@ $table-bg__lt:            null !default;
 $table-accent-bg__lt:     rgba($black__lt, .05) !default;
 $table-hover-color__lt:   $table-color__lt !default;
 $table-hover-bg__lt:      rgba($black__lt, .075) !default;
-$table-active-bg__lt:     $table-hover-bg__lt !default;
+$table-active-bg__lt:     $gray-200__lt !default;
 $table-border-color__lt:  $border-color__lt !default;
 $table-head-bg__lt:       $gray-200__lt !default;
 $table-head-color__lt:    $gray-700__lt !default;
