fix: Unexpected duplicate selector ".table"

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -134,6 +134,7 @@
   @include table-row-variant(selected, themes-get-value("table-active-bg"), themes-get-value("table-active-bg"));
 }
 
+// stylelint-disable-next-line no-duplicate-selectors
 .table {
   tbody tr {
     &:focus {
