--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -19,7 +19,7 @@
   @include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-line-height, $btn-border-radius);
   @include transition($btn-transition);
   &:not([class*="ghost"]):not([class*="link"]):not([class*="outline"]):not([class*="transparent"]) {
-    @include elevation(1);
+    @include elevation(1, false, true);
   }
 
   @include hover() {
