feat: update to Bootstrap 4.5.0

--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -5,7 +5,7 @@
 
 // @if $enable-gradients {
 //   @include theme-variant() {
-//     @include bg-gradient-variant(".bg-gradient-#{$color}", $value);
+//     @include bg-gradient-variant(".bg-gradient-#{$color}", $value, true);
 //   }
 // }
 
