--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -20,6 +20,7 @@
 .nav-link {
   display: block;
   padding: $nav-link-padding-y $nav-link-padding-x;
+  text-decoration: if($link-decoration == none, null, none);
 
   @include hover-focus() {
     text-decoration: none;
