feat: update to Boostrap v5

--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -158,6 +158,7 @@
   clear: both;
   font-weight: $font-weight-normal;
   text-align: inherit; // For `<button>`s
+  text-decoration: if($link-decoration == none, null, none);
   white-space: nowrap; // prevent links from randomly breaking onto new lines
   background-color: transparent; // For `<button>`s
   border: 0; // For `<button>`s
@@ -221,7 +222,7 @@
 // Dropdown section headers
 .dropdown-header {
   display: block;
-  padding: $dropdown-padding-y $dropdown-item-padding-x;
+  padding: $dropdown-header-padding;
   margin-bottom: 0; // for use with heading elements
   @include font-size($font-size-sm);
   white-space: nowrap; // as with > li > a
