fix: fix footer position

--- a/scss/layouts/_default.scss
+++ b/scss/layouts/_default.scss
@@ -58,6 +58,12 @@
     }
 
     .c-body {
+      // deprecate v4
+      // fix footer position to avoid breking change.
+      display: flex;
+      flex-direction: column;
+      // ---
+
       flex-grow: 1;
     }
   }
