--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -82,8 +82,14 @@
   @include borders($header-toggler-border);
   @include border-radius($header-toggler-border-radius);
 
-  @include hover-focus {
+  @include hover() {
+    color: $body-color;
     text-decoration: none;
+  }
+
+  &:focus,
+  &.focus {
+    outline: 0;
   }
 
   // Opinionated: add "hand" cursor to non-disabled .navbar-toggler elements
@@ -116,6 +122,15 @@
   .c-header-nav-btn {
     background-color: transparent;
     border: $btn-border-width solid transparent;
+
+    @include hover() {
+      text-decoration: none;
+    }
+
+    &:focus,
+    &.focus {
+      outline: 0;
+    }
   }
 
   .c-header-nav-link,
