--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -12,6 +12,10 @@
   padding: $sidebar-padding;
   box-shadow: none;
 
+  &.c-sidebar-right {
+    order: 99;
+  }
+
   @include media-breakpoint-down(breakpoint-before($mobile-breakpoint)) {
     // Some of our components use this property to detect if the sidebar has mobile behavior.
     --is-mobile: true;
@@ -43,7 +47,6 @@
       margin-left: - $sidebar-width;
     }
     &.c-sidebar-right {
-      order: 99;
       margin-right: - $sidebar-width;
     }
   }
