fix: add the proper variable to body-color

--- a/scss/variables/_body.scss
+++ b/scss/variables/_body.scss
@@ -3,7 +3,7 @@
 // Settings for the `<body>` element.
 
 $body-bg:     $gray-100 !default;
-$body-color:  $gray-900 !default;
+$body-color:  $gray-base !default;
 
 $body-theme-map: () !default;
 // stylelint-disable-next-line scss/dollar-variable-default
@@ -11,7 +11,7 @@ $body-theme-map: map-merge(
   (
     default: (
       "body-bg":     $body-bg,
-      "body-color":  $gray-base
+      "body-color":  $body-color
     )
   ),
   $body-theme-map
